--- a/4_django_jinja_templates/requirements.txt
+++ b/4_django_jinja_templates/requirements.txt
@@ -1,8 +1,6 @@
-Django==1.10
-Jinja2==2.8
+Django==1.11
+docutils==0.13.1
+Jinja2==2.9.4
+jinja2-django-tags==0.5
 MarkupSafe==0.23
-argparse==1.2.1
-distribute==0.6.24
-docutils==0.12
-jinja2-django-tags==0.2
-wsgiref==0.1.2
+pytz==2016.10
